univention-updater (10.0.33-2) unstable; urgency=low

  * Bug #36371: Block update on postgresql-8.3

 -- Philipp Hahn <hahn@univention.de>  Mon, 03 Nov 2014 14:07:19 +0100

univention-updater (10.0.33-1) unstable; urgency=low

  * Bug #36365: Added autoremove to preup, 
    purge pnm2ppa in preup 

 -- Felix Botner <botner@univention.de>  Mon, 03 Nov 2014 11:52:25 +0100

univention-updater (10.0.32-1) unstable; urgency=low

  * Bug #36322: Moved the button declaration

 -- Alexander Kramer <kramer@univention.de>  Thu, 30 Oct 2014 10:30:36 +0100

univention-updater (10.0.31-1) unstable; urgency=low

  * Bug #36287: Removed the debug statements

 -- Alexander Kramer <kramer@univention.de>  Thu, 30 Oct 2014 09:49:43 +0100

univention-updater (10.0.30-1) unstable; urgency=low

  * Bug #36287: Adapted auto scrolling in software update module

 -- Alexander Kramer <kramer@univention.de>  Thu, 30 Oct 2014 09:42:20 +0100

univention-updater (10.0.29-1) unstable; urgency=medium

  * Bug #35654: use app.registerOnStartup instead of topic

 -- Florian Best <best@univention.de>  Wed, 29 Oct 2014 10:56:33 +0100

univention-updater (10.0.28-1) unstable; urgency=low

  * Bug #36322: Added Back button in software module

 -- Alexander Kramer <kramer@univention.de>  Wed, 29 Oct 2014 09:17:46 +0100

univention-updater (10.0.27-1) unstable; urgency=low

  * univention-repository-create is know able to handle UCS 4 DVDs (Bug #36269)

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 24 Oct 2014 17:59:14 +0200

univention-updater (10.0.26-2) unstable; urgency=medium

  * Bug #35654: implement startup checks

 -- Florian Best <best@univention.de>  Fri, 24 Oct 2014 13:17:33 +0200

univention-updater (10.0.25-1) unstable; urgency=low

  * Autoremove packages in postup (Bug #36265) 

 -- Felix Botner <botner@univention.de>  Wed, 22 Oct 2014 15:02:53 +0200

univention-updater (10.0.24-1) unstable; urgency=low

  * Remove gdm packages and favour kdm in postup (Bug #35936)
